--- a/PFE/network_automation/les rôles/ip_addressing/tasks/main.yml
+++ b/PFE/network_automation/les rôles/ip_addressing/tasks/main.yml
@@ -1,1 +1,10 @@
-
+- name: BUILD IP ADDRESSING XML DATA
+  template:
+    src: ip_addressing.j2
+    dest: "{{ configs_dir }}/{{ inventory_hostname }}/ip_addressing.xml"
+- name: PUSH NETCONF TO REMOTES
+  netconf_config:
+    host: "{{ ansible_host }}"
+    username: "{{ ansible_user }}"
+    password: "{{ ansible_ssh_pass }}"
+    src: "{{ configs_dir }}/{{ inventory_hostname }}/ip_addressing.xml"
