--- a/PFE/network_automation/les rôles/mp_bgp/tasks/main.yml
+++ b/PFE/network_automation/les rôles/mp_bgp/tasks/main.yml
@@ -1,1 +1,10 @@
-
+- name: BUILD MP-BGP XML DATA
+  template:
+    src: mp_bgp.j2
+    dest: "{{ configs_dir }}/{{ inventory_hostname }}/mp_bgp.xml"
+- name: PUSH NETCONF TO REMOTES
+  netconf_config:
+    host: "{{ ansible_host }}"
+    username: "{{ ansible_user }}"
+    password: "{{ ansible_ssh_pass }}"
+    src: "{{ configs_dir }}/{{ inventory_hostname }}/mp_bgp.xml"
