--- a/PFE/network_automation/les rôles/routing_pe_ce/tasks/main.yml
+++ b/PFE/network_automation/les rôles/routing_pe_ce/tasks/main.yml
@@ -1,1 +1,10 @@
-
+- name: BUILD ROUTING PE-CE XML DATA
+  template:
+    src: routing_pe_ce.j2
+    dest: "{{ configs_dir }}/{{ inventory_hostname }}/routing_pe_ce.xml"
+- name: PUSH NETCONF TO REMOTES
+  netconf_config:
+    host: "{{ ansible_host }}"
+    username: "{{ ansible_user }}"
+    password: "{{ ansible_ssh_pass }}"
+    src: "{{ configs_dir }}/{{ inventory_hostname }}/routing_pe_ce.xml"
